Remove css var.

--- a/resources/css/oc.css
+++ b/resources/css/oc.css
@@ -133,7 +133,7 @@ label.digest-label {
   line-height: 20px;
   font-size: 16px;
   font-weight: bold;
-  color: var(--text-color);
+  color: #34414F;
 }
 
 a.digest-cta {
